Metadata/objects/Product_Catalog_Filter_Criteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used for filtering criteria of products.Users may filter products by currency or any other chosen field in the wizard screens.</description>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invoice IT Product Filter Criteria</label>
</CustomObject>